--- a/remote_template.html
+++ b/remote_template.html
@@ -129,9 +129,9 @@
             {{#if credentialSubject.productCategory}}
                 <span class="tile-label">Product Category</span>
                 {{#each credentialSubject.productCategory}}
-                    <p class="product-brief-text">{{credentialSubject.productCategory.code}}</p>
-                    <p class="product-brief-text">{{credentialSubject.productCategory.id}}</p>
-                    <p class="product-brief-text">{{credentialSubject.productCategory.name}}</p>
+                    <p class="product-brief-text">{{code}}</p>
+                    <p class="product-brief-text">{{id}}</p>
+                    <p class="product-brief-text">{{name}}</p>
                 {{/each}}
             {{/if}}
             
