--- a/remote_template.html
+++ b/remote_template.html
@@ -35,7 +35,7 @@
     .header-sub-title { color: var(--accent); font-size: 1.4rem;  }
     .header-status-area { text-align: right; }
     .origin-facility { font-size: 0.7rem; color: var(--text-dim); }
-    .product-brief-text { margin: 10px 0 0 0; line-height: 1.6; font-size: 0.9rem; color: #cbd5e1; }
+    .product-brief-text { margin: 10px 0 0 0; line-height: 1.6; font-size: 0.9rem; color: #cbd5e1; margin-bottom: 10px }
     .scorecard-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
     .utility-factor { font-size: 0.8rem; color: var(--text-dim); }
     .utility-factor b { color: #fff; }
