--- a/remote_template.html
+++ b/remote_template.html
@@ -129,7 +129,7 @@
             {{#if credentialSubject.productCategory}}
                 <span class="tile-label">Product Category</span>
                 {{#each credentialSubject.productCategory}}
-                    <span class="tile-value"><a href="{{id}}">{{code}}</a>- {{name}}</span> 
+                    <span class="standard-name"><a href="{{id}}">{{code}}</a>- {{name}}</span> 
                 {{/each}}
             {{/if}}
             
