--- a/remote_template.html
+++ b/remote_template.html
@@ -43,6 +43,7 @@
     .emissions-unit { font-size: 0.8rem; color: var(--text-dim); }
     .compliance-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
     .standard-name { font-size: 0.85rem; font-weight: 700; }
+    .standard-link { color: #fff; background: #5c85d6}
     .declared-values-grid { margin-top: 10px; display: flex; flex-wrap: wrap; gap: 5px; }
     .declared-box { background: #1e293b; padding: 5px; border-radius: 4px; font-size: 0.7rem; flex: 1; }
     .trace-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
@@ -129,7 +130,7 @@
             {{#if credentialSubject.productCategory}}
                 <span class="tile-label">Product Category</span>
                 {{#each credentialSubject.productCategory}}                    
-                    <p span class="standard-name"><a href="{{id}}">{{code}}</a> - {{name}}</span>
+                    <p span class="standard-name"><a class="standard-link" href="{{id}}">{{code}}</a> - {{name}}</span>
                 {{/each}}
             {{/if}}
             
