--- a/remote_template.html
+++ b/remote_template.html
@@ -43,7 +43,8 @@
     .emissions-unit { font-size: 0.8rem; color: var(--text-dim); }
     .compliance-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
     .standard-name { font-size: 0.85rem; font-weight: 700; }
-    .standard-link { color: #fff; background: #334766}
+    .standard-link { color: #fff; background: #334766; text-decoration: none; }
+    .standard-link:hover { text-decoration: underline; }
     .declared-values-grid { margin-top: 10px; display: flex; flex-wrap: wrap; gap: 5px; }
     .declared-box { background: #1e293b; padding: 5px; border-radius: 4px; font-size: 0.7rem; flex: 1; }
     .trace-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
