--- a/remote_template.html
+++ b/remote_template.html
@@ -131,7 +131,7 @@
             {{#if credentialSubject.productCategory}}
                 <span class="tile-label">Product Category</span>
                 {{#each credentialSubject.productCategory}}                    
-                    <p span class="standard-name">↗ <a class="standard-link" href="{{id}}">{{code}}</a> - {{name}}</span>
+                    <p span class="standard-name"><a class="standard-link" href="{{id}}">↗ {{code}}</a> - {{name}}</span>
                 {{/each}}
             {{/if}}
             
