--- a/remote_template.html
+++ b/remote_template.html
@@ -125,7 +125,7 @@
 
         <div class="panel-section">
             {{#if credentialSubject.description}}
-                <span class="tile-label">Description</span>
+                <div class="section-title">Description</div>
                 <p class="product-brief-text">{{credentialSubject.description}}</p>
             {{/if}}
             {{#if credentialSubject.productCategory}}
