--- a/remote_template.html
+++ b/remote_template.html
@@ -139,7 +139,7 @@
             {{#if credentialSubject.furtherInformation}}
                 <span class="tile-label">Further Information</span>
                 {{#each credentialSubject.furtherInformation}}
-                    <p><span class="standard-name"><a class="standard-link" href="{{linkURL}}">{{linkName}}</a></span></p>
+                    <p><a href="{{linkURL}}" class="btn-action"></p>{{linkName}} ↗</a></p>                  
                 {{/each}}
             {{/if}}
             
