--- a/remote_template.html
+++ b/remote_template.html
@@ -139,7 +139,7 @@
             {{#if credentialSubject.furtherInformation}}
                 <span class="tile-label">Further Information</span>
                 {{#each credentialSubject.furtherInformation}}
-                    <a href="{{linkURL}}" span class="btn-action">{{linkName}} ↗</a></span>
+                    </p><a href="{{linkURL}}" span class="btn-action">{{linkName}} ↗</a></span>
                 {{/each}}
             {{/if}}
             
