--- a/remote_template.html
+++ b/remote_template.html
@@ -24,7 +24,7 @@
     .pill-danger { background: rgba(239, 68, 68, 0.2); color: var(--danger); border: 1px solid var(--danger); }
     .conformity-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
     .compliance-card { background: #0f172a; padding: 15px; border-radius: 8px; border-left: 4px solid var(--accent); }
-    .btn-action { display: inline-block; margin-top: 10px; color: var(--accent); text-decoration: none; font-size: 0.75rem; font-weight: 600; }
+    .btn-action { display: inline-block; padding-left: 10px; color: var(--accent); text-decoration: none; font-size: 0.75rem; font-weight: 600; }
     .btn-action:hover { text-decoration: underline; }
 
     /* New Classes replacing inline styles */
