--- a/remote_template.html
+++ b/remote_template.html
@@ -37,7 +37,7 @@
     .origin-facility { font-size: 0.7rem; color: var(--text-dim); }
     .product-brief-text { margin: 10px 0 0 0; line-height: 1.6; font-size: 0.9rem; color: #cbd5e1; margin-bottom: 15px; padding-left: 10px; }
     .scorecard-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-    .utility-factor { font-size: 0.8rem; color: var(--text-dim); }
+    .utility-factor { font-size: 0.8rem; color: var(--text-dim); display: flex; justify-content: space-between; align-items: center; }
     .utility-factor b { color: #fff; }
     .emissions-value { font-size: 2rem; font-weight: 800; color: #fff; }
     .emissions-unit { font-size: 0.8rem; color: var(--text-dim); }
