--- a/remote_template.html
+++ b/remote_template.html
@@ -126,7 +126,7 @@
 
         <div class="panel-section">
             {{#if credentialSubject.description}}
-                <div class="section-title">Description</div>
+                <div class="section-title">Product Description</div>
                 <p class="product-brief-text">{{credentialSubject.description}}</p>
             {{/if}}
             {{#if credentialSubject.productCategory}}
