--- a/remote_template.html
+++ b/remote_template.html
@@ -46,7 +46,7 @@
     .standard-link { color: #fff; text-decoration: none; padding-left: 10px; }
     .standard-link:hover { text-decoration: underline; }
     .declared-values-grid { margin-top: 10px; display: flex; flex-wrap: wrap; gap: 5px; }
-    .declared-box { background: #1e293b; padding: 5px; border-radius: 4px; font-size: 0.7rem; flex: 1; }
+    .declared-box { background: #1e293b; padding: 5px 5px 5px 10px; border-radius: 4px; font-size: 0.7rem; flex: 1; }
     .declared-topic { color: var(--accent); font-size: 0.8rem;  }
     .trace-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
     .trace-events-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 10px; }
