--- a/remote_template.html
+++ b/remote_template.html
@@ -143,14 +143,11 @@
                 {{/each}}                
             {{/if}}
             {{#if credentialSubject.circularityScorecard.recyclingInformation}}
-                </p><a href="{{credentialSubject.circularityScorecard.recyclingInformation.linkURL}}" span class="btn-action">{{credentialSubject.circularityScorecard.recyclingInformation.linkName}} ↗</a></span>
+                </p>Recycling: <a href="{{credentialSubject.circularityScorecard.recyclingInformation.linkURL}}" span class="btn-action">{{credentialSubject.circularityScorecard.recyclingInformation.linkName}} ↗</a></span>
             {{/if}}
             {{#if credentialSubject.circularityScorecard.repairInformation}}
-                 </p><a href="{{credentialSubject.circularityScorecard.repairInformation.linkURL}}" span class="btn-action">{{credentialSubject.circularityScorecard.repairInformation.linkName}} ↗</a></span>
+                </p>Repair: <a href="{{credentialSubject.circularityScorecard.repairInformation.linkURL}}" span class="btn-action">{{credentialSubject.circularityScorecard.repairInformation.linkName}} ↗</a></span>
             {{/if}}
-            
-            <a href="https://example.com/Repair_information.pdf" class="btn-action">Repair Guide</a>
-            <a href="https://example.com/Recycling_information.pdf" class="btn-action">Recycling Data</a>
             
         </div>
 
