--- a/remote_template.html
+++ b/remote_template.html
@@ -39,7 +39,7 @@
     .scorecard-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
     .utility-factor { font-size: 0.8rem; color: var(--text-dim); display: flex; justify-content: space-between; align-items: center; }
     .utility-factor b { color: #fff; }
-    .emissions-value { font-size: 2rem; font-weight: 800; color: #fff; }
+    .emissions-value { font-size: 2rem; font-weight: 800; color: #fff; padding-left: 10px; }
     .emissions-unit { font-size: 0.8rem; color: var(--text-dim); }
     .compliance-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
     .standard-name { font-size: 0.85rem; font-weight: 700; }
