--- a/remote_template.html
+++ b/remote_template.html
@@ -27,7 +27,6 @@
     .btn-action { display: inline-block; padding-left: 10px; color: var(--accent); text-decoration: none; font-size: 0.75rem; font-weight: 600; }
     .btn-action:hover { text-decoration: underline; }
 
-    /* New Classes replacing inline styles */
     .dim-container { font-size: 0.85rem; margin-top: 5px; }
     .dim-row { display: flex; justify-content: space-between; margin-bottom: 4px; border-bottom: 1px solid var(--border); }
     .dim-label { color: var(--text-dim); }
@@ -53,6 +52,26 @@
     .trace-link { background: var(--sidebar-bg); padding: 10px; border-radius: 6px; border: 1px solid var(--border); }
     .footer-actions { display: flex; gap: 20px; border-top: 1px solid var(--border); padding-top: 20px; }
 
+    .emissions-meta-container {
+    display: flex;
+    gap: 20px;
+    margin: 15px 0;
+    padding: 10px 0;
+    border-top: 1px solid var(--border);
+    border-bottom: 1px solid var(--border);
+}
+
+.emissions-meta-item {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.meta-value {
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: #fff;
+}
     @media (max-width: 900px) {
         .dpp-dashboard { grid-template-columns: 1fr; }
         .dpp-sidebar { border-right: none; border-bottom: 1px solid var(--border); }
