--- a/remote_template.html
+++ b/remote_template.html
@@ -151,7 +151,7 @@
             {{#if credentialSubject.productCategory}}
                 <span class="tile-label">Product Category</span>
                 {{#each credentialSubject.productCategory}}                    
-                    <p><span class="standard-name"><a class="standard-link" href="{{id}}">{{code}} - {{name}}</a></span><br><span class="declared-value">({{schemeName}})</span></p>
+                    <p><span class="standard-name"><a class="standard-link" href="{{id}}">{{code}} - {{name}}</a></span><br><span class="declared-box">({{schemeName}})</span></p>
                 {{/each}}
             {{/if}}
 
